--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "adm-zip": "0.4.7",
+    "@apollo/server": "4.10.4",
+    "@nestjs/apollo": "13.1.0",
     "body-parser": "1.9.0",
     "cfenv": "^1.0.4",
     "consolidate": "0.14.5",
